# Addons

./: .gitignore  README.md  build.bat  pyproject.toml
.github/workflows/: release.yml
src/endstone_addons/: __init__.py  entry.py
src/endstone_addons/tools/: addon_downloader.py  addons_getter.py  config_provider.py  type_getter.py  zip_processor.py
src/endstone_addons/types/: addons_processor.py  cleaner.py  pack_filler.py  pack_type.py  path_provider.py  storage.py
