[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_addons"]

[project]
name = "endstone_addons"
version = "0.1.0"
dependencies = [
    "ujson"
]

[project.entry-points."endstone"]
addons = "endstone_addons:AddonsPlugin"